--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,7 @@ list-style: none;
   .section-main .div-2  em {
     width: 50%;
     height: 99%;
-    background-color: black;
+    background-color:#1F2833;
     text-align: center;
     font-size: 18px;
     color:rgb(0, 255, 153);
