--- a/css/style.css
+++ b/css/style.css
@@ -1,325 +1,400 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  span {
-    font-weight: bolder;
-    font-size: 22px;
-    margin-left: 35%;
-    background-color: black;
-  }
-  
-  em{
-    justify-content: center;
-  }
- 
-  header {
-    padding: 40px;
-    text-align: center;
-    background: 	#0B0C10;
-    color: white;
-    display:flex;
-    justify-content:space-between;
-    align-items: center;
-    padding: 20px 10%;
-  }
-  nav {
-    display: inline;
-    background-color:	#0B0C10;
-    margin-inline:20px;
-   margin-right: none;
- 
-  }
-  
-  li, a, button {
-    font-family: monospace;
-    font-weight: 500;
-    font-size: 16px;
-    text-decoration: none;
-  }
-  
-  .nav_links {
-    list-style: ;
-    display: flex;
-    margin-left: 250px;
-  }
-  .nav_links li{
-    display: inline-block;
-    padding: 0px 20px;
-list-style: none;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
-  }
 
-  .nav_links li a {
-    transition: all 0.3s ease 0s;
-   
-    
-  }
-  .nav_links li a:hover {
-    color:rgb(0, 255, 153);
-  }
-  button {
-    padding: 9px 25px; 
-    background-color:rgb(0, 255, 153);
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-   
-  }
-  button:hover {
-    background-color:#0B0C10 ;
-    color: rgb(0, 255, 153);
+em {
+  color: black;
+}
 
-  }
-  .Logo {
-    height: 80px;
-    width: auto;
-  margin-left: none;
- cursor: pointer;
- margin-right: 7%;
- border-radius: 15px;
+header {
+  padding: 0px;
+  text-align: center;
+  background: 	#0B0C10;
+  color: white;
+  display:flex;
+  justify-content:space-between;
+  align-items: center;
+  padding: 20px 10%;
+}
 
-  }
-  
-  nav a {
-    color: white;
-    padding: 5px 0;
-    text-decoration: none;
-    text-align: center;  
-  }
-  /* all above is for nav guide */
-  
-/* all below is for aside bar*/
-  body {
-    font-family: Arial;
-    margin: 0;   
-  }
-  
-  main {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  
-  aside {
-    flex: 1;
-    background-color: #1F2833;
-    padding: 40px;
-    text-align: center;
-    color: #c5c6c7;  
-  }
-  h2 {
-    margin-bottom: 110%;
-    margin-top: 10%;
-  }
-  /*all below is for section*/
-  /*$laptop: 1024px;// lg
-  $desktop: 1200px; // lx
-  $tablet : 768px; // xl
-  $iphone :480px ;// sm
-  
-  
-  
-  
-    /* For media screen size 1200 desktop width*/
 
-    @media screen and (min-width:1200px){
-   {
-     
-     { 
-      
-
-     }
-      }
-
-   
-    }
-      
-    
-    /* Make the sidebar stack below the body */
-   
-     
-    
-       
-      
-      
-    
-  
-  /*all above is for  middle flexbox*/
- 
- .card {
-    width: 375px;
-    height: 350px;
-  background: black;
-  margin: 20px;
-  border-radius: 15px;
-  color: rgb(0, 255, 153);
-  flex-wrap: wrap;
-  }
-  
-  h4 {
-    font-weight: bolder;
-    font-size: 22px;
-    margin-left: 25%;
-    background-color: black;
-   
-  }
-  body {
-    background-image: url(../images/hardwood-grey2.jpg);
-    background-size: cover;
-    
-    
-   
-  }
-  .container {
-    display: flex;
-    justify-content:center ;
-    height: 350px;
-    background: none;
-    margin-top: 0%;
-   flex-wrap: wrap;
-  }
-  .bottom-flex {
-    display: inline;
-    height: 350px;
-    background: none;
-    margin-bottom: 0%;
-   flex-wrap: wrap;
-   
-  }
-  p {
-    text-align: center;
-  }
-  
-  .card-image {
-    border-radius: 15px 15px 0 0;
-    height: 225px;
-  }
-  .car-1 {
-    background-image:url(../images/bluecode3.jpg) ;
-    background-size: cover;
-  }
-  .car-2 {
-    background-image:url(../images/Backend.png) ;
-    background-size: cover;
-  }
-  /* above is for middle flexbox*/
-/* bottom row below */
-  .car-3 {
-    background-image:url(../images/skills2.jpg) ;
-    background-size: cover;
-    
-
-  }
-  
-  .card a {
-    background-color: #0B0C10;
-    color: white;
-    padding: 15px 20px;
-    display: block;
-   text-align: center;
-   margin: 10px 95px;
-    
-  }
-  .card-3 {
-    width: 375px;
-    height: 375px;
-  background: black;
-  margin: 50px;
-  border-radius: 15px;
-  color: rgb(0, 255, 153);
-  flex-wrap: wrap;
-  }
-  .card-3 a {
-    background-color: #0B0C10;
-    color: white;
-    padding: 15px 20px;
-    display: block;
-   text-align: center;
-   margin: 0 70px;
-  }
-  .car-3{
-    background-size: 450px 225px;
-  background-position: center;
-    
-  }
-  div.card-3 {
-    margin-left: 5%;
-  }
-  
-  /*all below is for top flexbox*/
-  
-  .section-main .div-1 {
-    width: 35%;
-    height: 85%;
-    background-color:none;
-    border-radius: none;
-    
-    
-  }
-  
-  
-  .section-main .div-2  em {
-    width: 50%;
-    height: 99%;
-    background-color:black;
-    text-align: center;
-    font-size: 18px;
-    color:rgb(0, 255, 153);
-   font-weight: bolder;
-  margin-left: 25%;
-  display: flex;
-  } 
-  
-  
-    
-  
-  .section-main .div-2:hover {
-    color: #27231D;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-   
-  }
- .portrait {
-    width: 350px;
-    height: 225px;
-   border-radius: 15px;
-   margin-left: 0;
-   margin-top: 5%;
-   box-shadow: 30px 45px 175px black;
-   padding: 20px solid black;
-  }
-  .section-main {
-    width: 1000px;
-    height: 300px;
-    background-color: #C5C6c7;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    background-image: url(../images/hardwood-grey2.jpg);
-    margin-bottom: 0%;
-    
-  
-  }
-   .div-2 p {
-   margin-top: 11%;
-   } 
-.div-1:hover {
+li, a, button {
+  font-family: monospace;
+  font-weight: 500;
+  font-size: 16px;
+  text-decoration: none;
   cursor: pointer;
-  background-color: none;
   
 }
-    /*all below is for footer*/
-  footer {
-    padding: 110px;
-    background: #1F2833;
-    color:white;
-    justify-content: center;
+
+.nav_links { 
+  display: flex;
+  margin-left: 250px;
+}
+.nav_links li{
+  display: inline-block;
+  padding: 0px 20px;
+list-style: none;
+
+}
+
+.nav_links li a {
+  transition: all 0.3s ease 0s;
+ 
+  
+}
+
+button {
+  padding: 9px 25px; 
+  background-color:rgb(0, 255, 153);
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+ 
+}
+button:hover {
+  background-color:#0B0C10 ;
+  color: rgb(0, 255, 153);
+
+}
+.Logo {
+  height: 80px;
+  width: auto;
+margin-left: none;
+cursor: pointer;
+margin-right: 7%;
+border-radius: 15px;
+
+}
+a{
+  display: none;
+  
+}
+li{
+  list-style: none;
+  margin: 5px;
+}
+li:hover{
+  color: rgb(0, 255, 153);
+}
+nav a {
+  color: white;
+  padding: 5px 0;
+  text-decoration: none;
+  text-align: center;  
+}
+.Sub-Menu {
+  margin-right: 1%;
+  margin-top: 1%;
+  font-size: 18px;
+  font-weight: bold;
+ display: none;
+  margin-left: 0%;
+  color: rgb(0, 255, 153);
+}
+/* all above is for nav  bar */
+/* all below is for @media  for nav guide */
+@media screen and (min-width:1200px){
+  .nav_links li {
+    display: flex;
+    font: 10px;
+    flex-wrap: wrap;
+    list-style: none;
   }
- h3 {
-  justify-content: center;
-  text-align:right;
+}
 
+
+@media screen and (max-width:926px){
+  .Sub-Menu{
+    display: inline-block;
+  }
+.nav_links{
+  display: none;
+}
+button{
+  display: none;
+}
+a{
+  display: inline-block;
+}
+
+}
+/* all Above is for @mediascreen  for nav guide */
+/* all below is for body */
+.container {
+display:flexbox;
+flex-wrap: wrap;
+background-color: white;
+width: 225px;
+height: 200px;
+margin-left: 39%;
+margin-top: 30px;
+background-image: url(../images/Tyler.jpg);
+background-size: cover;
+background-position: center;
+
+}
+.container-2 {
+display:inline-block;
+flex-wrap: wrap;
+background-color: white;
+width: 225px;
+height: 200px;
+margin-left: 15%;
+margin-top: 20px;
+margin-right: 70px;
+background-image: url(../images/bluecode3.jpg);
+background-size: cover;
+
+}
+
+.container-4 {
+display:flexbox;
+flex-wrap: wrap;
+background-color: white;
+width: 225px;
+height: 200px;
+margin-left: 39%;
+margin-top: 20px;
+background-image: url(../images/bluecode3.jpg);
+background-position:center;
+background-size: cover;
+;
+
+
+}
+
+/* below is media queries for body*/
+
+/*phone except surface duo*/
+@media screen and (max-width:415px){
+.container{
+  margin-left: 25%;
+  margin-top: 5%;
+ height: 125px;
+   }
+   .container-4{
+    margin-left: 25%;
+    height: 125px;
+
+   }
+  .container-2 {
+    margin-left: 25%;
+    height: 125px;
+
+   }
+
+/*surface duo*/
  }
+ @media screen and (max-width:550px){
+  .container{
+    margin-left: 31%;
+    margin-top: 5%;
+   height: 145px;
+     }
+     .container-4{
+      margin-left: 31%;
+      height: 145px;
 
+     }
+    .container-2 {
+      margin-left: 31%;
+      height: 145px;
+
+     }
+
+  
+   }
+   
+ @media screen and (max-width:550px){
+  .container{
+    margin-left: 31%;
+    margin-top: 5%;
+   height: 145px;
+     }
+     .container-4{
+      margin-left: 31%;
+      height: 145px;
+
+     }
+    .container-2 {
+      margin-left: 31%;
+      height: 145px;
+
+     }
+
+  
+   }
+   /*if screen is less than 863px takes in line position for cards*/
+   @media screen and (max-width:863px){
+    .container{
+      margin-left: 35%;
+      margin-top: 5%;
+     height: 145px;
+       }
+       .container-4{
+        margin-left: 35%;
+        height: 145px;
+  
+       }
+      .container-2 {
+        margin-left: 35%;
+        height: 145px;
+  
+       }
+  
+    
+     }
+     /*if screen is bigger than 990px*/
+     @media screen and (min-width:990px){
+      .container{
+        margin-left: 39%;
+        margin-top: 4%;
+       height: 200px;
+       width: 250px;
+         }
+         .container-4{
+          margin-left: 39%;
+          height: 200px;
+          width:250px ;
+          margin-top: 5px;
+    
+         }
+        .container-2 {
+          margin-left: 35%;
+          height: 145px;
+          width: 250px;
+          height: 200px;
+          margin-left: 15%;
+          margin-top: 5px;
+           margin-right: 75px;
+           margin-bottom: 0%;
+    
+         }
+    
+      
+       }
+        /*if screen is less than 990px*/
+       @media screen and (min-width:1080px){
+        .container{
+          margin-left: 41%;
+          margin-top: 4%;
+         height: 200px;
+         width: 250px;
+           }
+           .container-4{
+            margin-left: 41%;
+            height: 200px;
+            width:250px ;
+            margin-top: 5px;
+      
+           }
+          .container-2 {
+            margin-left: 35%;
+            height: 145px;
+            width: 250px;
+            height: 200px;
+            margin-left: 17%;
+            margin-top: 5px;
+             margin-right: 75px;
+             margin-bottom: 0%;
+      
+           }
+      
+        
+         }
+    
+
+
+
+
+
+
+
+
+
+
+
+/*all below is for section*/
+/*$laptop: 1024px;// lg
+$desktop: 1200px; // lx
+$tablet : 768px; // xl
+$iphone :480px ;// sm
+
+
+
+
+  /* For media screen size 1200 desktop width*/
+
+  @media screen and (min-width:1200px){
+ {
+   
+   { 
+    
+
+   }
+    }
+
+ 
+  }
+    
+  
+  /* Make the sidebar stack below the body */
+ 
+  body {
+    background-image: url(../images/hardwood-grey2.jpg);
+    background-size: cover;
+    height: 900px;
+    
+    
+   
+  }
+  
+     
+    /*below is for footer*/
+    .footer {
+      background-color: #0B0C10;
+      color: rgb(0, 255, 153);
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: 11%;
+
+    }
+    
+/*card styling*/
+ .container-2 {
+font-family: monospace;
+color: white;
+border-radius: 15px;
+font-size: 13px;
+}
+.container {
+  font-family: monospace;
+color: white;
+border-radius: 15px;
+font-size: 18px;
+}
+.container-4{
+  font-family: monospace;
+color: white;
+border-radius: 15px;
+font-size: 18px;
+}
+.container-4:hover {
+  cursor: pointer;
+  color:  rgb(0, 255, 153);
+}
+.container-2:hover{
+  cursor: pointer;
+  color: rgb(0, 255, 153);
+}
+.container:hover{
+  cursor: pointer;
+  color: rgb(0, 255, 153);
+}
+
+/*making section jump*/
